--- a/tabla.html
+++ b/tabla.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabla</title>
+    <style>
+        h2{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <p><a href="index.html">Inicio</a></p>
-   <table border="1" width="80%">
+    <h2>ANALISIS DE VENTA ANUALES</h2>
+   <table border="1" width="100%"> 
     <tr>
         <th rowspan="2">Año</th>
         <th colspan="4">EXPANSIÓN DE VENTA</th>
