--- a/formulario.html
+++ b/formulario.html
@@ -15,7 +15,7 @@
         COMPLETE EL SIGUIENTE FORMULARIO, Gracias.</p>
         <label for="">Seleccione destinatario de su mensaje</label>
         <br>
-        <select name="languajesP" id="">
+        <select name="opciones" id="">
             <option value="1">Servicio Técnico</option>
             <option value="1">-</option>
             <option value="1">-</option>
@@ -26,28 +26,28 @@
         <input type="reset">
         <br>
         <label for="">Nombre y Apellidos</label>
-        <input type="text"> 
+        <input type="text" name="Nombres"> 
         <br>
         <label for="">Domicilio</label>
-        <input type="text" spellcheck="true"> 
+        <input type="text" name="direccion" spellcheck="true"> 
         <br>
         <label for="">Ciudad</label>
-        <input type="text" spellcheck="true">
+        <input type="text" name="ciudad" spellcheck="true">
         <br>
         <label for="">Cód. postal</label>
-        <input type="text">
+        <input type="text" name="codpost">
         <br>
         <label for="">Provincia</label>
-        <input type="text"> 
+        <input type="text" name="Provincia"> 
         <br>
         <label for="">Teléfono</label>
-        <input type="tel" >
+        <input type="tel" name="Telefono">
         <br>
         <label for="">E-mail</label>
-        <input type="email">
+        <input type="email" name="correo">
         <br>
         <label for="">Fecha de Nacimiento</label>
-        <input type="date">
+        <input type="date" name="Fnacimiento">
     </form>
    </fieldset>
 </body>
