--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <br>
         <nav>
         <ol> <!--target="_blank"-->
-            <li><a href="index.html">Parrafos</a></li>
-            <li><a href="listas.html">Listas</a></li>
-            <li><a href="multimedia.html">Multimedia</a></li>
-            <li><a href="tabla.html">Tabla</a></li>
-            <li><a href="formulario.html">Formulario</a></li>
+            <li><a href="index.html" target="_blank">Parrafos</a></li>
+            <li><a href="listas.html" target="_blank">Listas</a></li>
+            <li><a href="multimedia.html" target="_blank">Multimedia</a></li>
+            <li><a href="tabla.html" target="_blank">Tabla</a></li>
+            <li><a href="formulario.html" target="_blank">Formulario</a></li>
         </ol>
         </nav>
     </p>
